syntax = "proto3";

service DailyPvUv {
    rpc Show(Request) returns (Response) {}
}

message Request {
    string name = 1;
    string type = 2;
    string value = 3;
    string create_time = 4;
    string update_time = 5;
    int32  is_delete = 6;
    int32  page = 7;
    int32  page_size = 8;
    int32   id = 9;
    string works_id = 10;
    int32 status = 12;
    int32 pid = 11;
}

message Response {
    message Notify {
        int32   id = 1;
        string  worksId =2;
        int32   uid = 3;
    }
    repeated Notify data = 12;
    int32 affectedRows = 11;
    int32 total = 13;
}

