syntax = "proto3";

service Bank {
    rpc Show(Request) returns (Response) {}

}

message Request {
    int32 id = 1;
    int32 siteId = 2;
    int32 status = 3;
}

message Response {
    message Result {
        string url = 1;
        string title = 2;
        repeated string snippets = 3;
    }
}